@@ -24,6 +24,19 @@
     <junit.additionalArgLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED</junit.additionalArgLine>
   </properties>
 
+  <profiles>
+    <profile>
+      <id>java21</id>
+      <activation>
+        <jdk>21</jdk>
+      </activation>
+      <properties>
+        <!-- testで用いられている SecurityManager はJava18からデフォルトで動的にインストールできないようになっており、Java21 で動かすとエラーになるため、明示的に許可する。 -->
+        <junit.additionalArgLine>-Djava.security.manager=allow</junit.additionalArgLine>
+      </properties>
+    </profile>
+  </profiles>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
